# md-docx-converter

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  install.sh  package-lock.json  package.json
.claude/: launch.json  settings.local.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml
apps/desktop/: package-lock.json  package.json
apps/desktop/src/: App.css  App.tsx  types.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/resources/pandoc/: README.md  reference.docx
apps/desktop/src-tauri/resources/pandoc/filters/: mermaid-config.json  mermaid.lua  table-style.lua
apps/desktop/src-tauri/src/: lib.rs
apps/desktop/src-tauri/src/commands/: convert.rs  detect.rs  history.rs  mod.rs
apps/desktop/src-tauri/src/pandoc/: executor.rs  mod.rs  options.rs
apps/desktop/src/components/: ConversionToggle.tsx  FileList.tsx  HistorySidebar.tsx  ProgressBar.tsx  QueueStatus.tsx  (+1 more)
apps/website/app/: layout.tsx  page.tsx
apps/website/lib/: downloads.ts
docs/: SOW.md  enterprise-docx-features.md
md-docx-website/: package-lock.json  package.json
md-docx-website/app/: page.tsx
md-docx-website/components/: DownloadButton.tsx
md-docx-website/lib/: downloads.ts
scripts/: generate-reference-docx.py  take-screenshots.ts
src/: App.css
src-tauri/: tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/pandoc/: executor.rs
src/components/: FileDropZone.tsx  ResultsList.tsx
src/hooks/: useConversion.ts
test-docs/: sample-long.md  sample-short.md
(+2 files in other folders)
