[package]
name = "md-docx-converter"
version = "1.0.0"
description = "MD ↔ DOCX Converter Desktop App"
authors = ["Deepak Tiwari"]
edition = "2021"

[lib]
name = "md_docx_converter_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

